Changes project name

--- a/react_concepts_with_egs/package.json
+++ b/react_concepts_with_egs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "all-concepts-egs",
+  "name": "react_concepts_with_egs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
