--- a/react_concepts_with_egs/package.json
+++ b/react_concepts_with_egs/package.json
@@ -9,8 +9,12 @@
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.2",
     "env-cmd": "^10.1.0",
+    "i18next": "^23.16.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.1.1",
     "react-intersection-observer": "^9.10.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1",
