Added Examples on the Next.js concept project with notes in the readme.md file
- Page creating
- Layout of pages
- Routing
- fonts ,
- Nested Routing
- Route Grouping

--- a/next_ts_egs/package.json
+++ b/next_ts_egs/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "s": "npm run dev",
     "start": "next start",
     "lint": "next lint"
   },
