Added how to use context-provider example (global state management), as the work different in next.js

--- a/next_ts_egs/package.json
+++ b/next_ts_egs/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "s": "npm run dev",
+    "i": "npm install",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +17,7 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
     "wait": "^0.4.2"
   },
   "devDependencies": {
